# ohio_voter_challenges

./: .gitignore  LICENSE  README.md  analysis.py  boe_websites.json  boe_websites2.json  config.yaml  pyproject.toml  relevant_boe_websites.json  test.py  utils.py
data/: boe_websites.json  challenges.json  county_challenges_news.csv  county_challenges_official.csv  meeting_minutes_urls.json
data/pdf/: BMM08132021.pdf.crdownload  BMM08182021.pdf.crdownload
data/txt/: 01022024meeting.txt  010416Meeting.txt  010719Meeting.txt  01072025Meeting.txt  010720Meeting.txt  010917Meeting.txt  01092023meeting.txt  01102022Meeting.txt  011221Meeting.txt  011916Meeting.txt  012820Meeting.txt  02082022Meeting.txt  02082022MeetingUpdated.txt  020921Meeting.txt  02102022Meeting.txt  02112025Meeting.txt  021120Meeting.txt  021219Meeting.txt  021317Meeting.txt  02132023meeting.txt  021320Meeting.txt  021616Meeting.txt  021820Meeting.txt  02202024Meeting.txt  02262024Meeting.txt  030216Meeting.txt  030221Meeting.txt  030519Meeting.txt  03052025Meeting.txt  030617Meeting.txt  03062023meeting.txt  031120Meeting.txt  031417Meeting.txt  031516Meeting.txt  031720Meeting.txt  03192024Meeting.txt  032020Meeting.txt  03312025ProclamationL&ATest.txt  033120Meeting.txt  040116Meeting.txt  (+270 more)
