[project]
name = "ohio_voter_challenges"
version = "0.1.0"
description = ""
readme = "README.md"
requried-python-version = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "scrapy>=2.11.2",
    "pandas>=2.2.2",
    "ruff>=0.6.3",
    "pymongo>=4.10.1",
    "numpy>=1.21.2",
    "ipykernel>=6.4.1",
    "crawl4ai[sync]",
    "selenium",
    "scipy",
    "matplotlib"
]