[project]
name = "ohio_voter_challenges"
version = "0.1.0"
description = ""
readme = "README.md"
requried-python-version = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "scrapy>=2.11.2",
    "pandas",
    "ruff>=0.6.3",
    "pymongo>=4.10.1",
    "pyyaml",
    "numpy",
    "requests",
    "lxml",
    "beautifulsoup4",
    "cssselect",
    "ipykernel>=6.4.1",
    "requests-html",
    "selenium",
    "scipy",
    "matplotlib",
    "pdfminer",
    "langchain-community",
    "unstructured"
]